--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/luxon": "^3.0.3",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.18",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   },
@@ -23,6 +24,7 @@
     "firebase-admin": "^11.2.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^3.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.0"
   }
 }
