--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.14",
     "@types/luxon": "^3.0.3",
+    "@types/mongoose": "^5.11.97",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.18",
     "@types/uuid": "^8.3.4",
@@ -24,6 +25,7 @@
     "firebase-admin": "^11.2.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^3.1.0",
+    "mongoose": "^6.7.2",
     "mysql": "^2.18.1",
     "uuid": "^9.0.0"
   }
