--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/express": "^4.17.14",
     "@types/luxon": "^3.0.3",
     "@types/mongoose": "^5.11.97",
-    "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.18",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^8.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
@@ -26,7 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "luxon": "^3.1.0",
     "mongoose": "^6.7.2",
-    "mysql": "^2.18.1",
+    "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   }
 }
