--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "luxon": "^3.1.0",
     "mongoose": "^6.7.2",
