--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
     "joi": "^17.7.0",
