--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.16",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
