--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "luxon": "^3.1.0",
     "mongoose": "^6.7.2",
     "socket.io": "^4.5.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xendit-node": "^1.21.10"
   }
 }
